--- a/form.html
+++ b/form.html
@@ -20,7 +20,7 @@
 				</label>
 				<label>
 					Seu email:<br>
-					<input type="text" name="email" id=""/>
+					<input type="text" name="email" data-rules="required"/>
 				</label>
 				<label>
 					Sua senha:<br>
