--- a/form.html
+++ b/form.html
@@ -16,15 +16,15 @@
 			<form action="" method="post" id="validador">
 				<label>
 					Seu nome:<br>
-					<input type="text" name="name" data-rules="required"/>
+					<input type="text" name="name" data-rules="required|min=2"/>
 				</label>
 				<label>
 					Seu email:<br>
-					<input type="text" name="email" data-rules="required"/>
+					<input type="text" name="email" data-rules="required|email"/>
 				</label>
 				<label>
 					Sua senha:<br>
-					<input type="password" name="password" id=""/>
+					<input type="password" name="password" data-rules="required|min=4"/>
 				</label>
 				<label>
 					<input type="submit" value="Cadastrar">
